# ITMO-IS-Y27

1-year/C++/: README.md
1-year/C++/labwork1-egorstar555/: CMakeLists.txt  README.md  main.cpp
1-year/C++/labwork10-egorstar555/: CMakeLists.txt
1-year/C++/labwork10-egorstar555/lib/: CMakeLists.txt  MyFunction.h  TaskScheduler.h  mystdany.h
1-year/C++/labwork10-egorstar555/tests/: CMakeLists.txt  TaskScheduler_test.cpp
1-year/C++/labwork11-egorstar555/: CMakeLists.txt  README.md
1-year/C++/labwork11-egorstar555/lib/: CMakeLists.txt  InvertedIndex.h  LogicExpression.h  SimpleSearchEngine.cpp  SimpleSearchEngine.h
1-year/C++/labwork11-egorstar555/tests/: CMakeLists.txt  SimpleSearchEngine_test.cpp
1-year/C++/labwork2-egorstar555/: README.md
1-year/C++/labwork2-egorstar555/lib/: CMakeLists.txt  number.cpp  number.h  test.cpp
1-year/C++/labwork3-egorstar555/: CMakeLists.txt  README.md  main.cpp
1-year/C++/labwork4-egorstar555/: README.md
1-year/C++/labwork4-egorstar555/lib/: ArgParser.cpp  ArgParser.h  CMakeLists.txt
1-year/C++/labwork4-egorstar555/tests/: argparser_test.cpp
1-year/C++/labwork5-egorstar555/: CMakeLists.txt  README.md
1-year/C++/labwork5-egorstar555/lib/: Array3D.cpp  Array3D.h  CMakeLists.txt
1-year/C++/labwork5-egorstar555/tests/: CMakeLists.txt  array3d_test.cpp
1-year/C++/labwork6-egorstar555/: CMakeLists.txt  HammingArchiver.cpp  README.md
1-year/C++/labwork6-egorstar555/HammingArchiver/: HammingArchiver.cpp  HammingArchiver.h
1-year/C++/labwork6-egorstar555/lib/: ArgParser.cpp  ArgParser.h  CMakeLists.txt
1-year/C++/labwork6-egorstar555/tests/: CMakeLists.txt  argparser_test.cpp
1-year/C++/labwork7-egorstar555/: CMakeLists.txt  README.md
1-year/C++/labwork7-egorstar555/Config/: config.json
1-year/C++/labwork7-egorstar555/lib/: CMakeLists.txt  CityRepository.cpp  CityRepository.h  Forecast.cpp  Forecast.h  WMOIcons.h
1-year/C++/labwork8-egorstar555/: CMakeLists.txt  README.md
1-year/C++/labwork8-egorstar555/lib/: BinaryTreeSTL.cpp  BinaryTreeSTL.h  CMakeLists.txt  Iterator.h  Node.h
1-year/C++/labwork8-egorstar555/tests/: BinaryTreeSTL_test.cpp  CMakeLists.txt
1-year/C++/labwork9-egorstar555/: CMakeLists.txt
1-year/C++/labwork9-egorstar555/lib/: AdaptersSTL.cpp  AdaptersSTL.h  CMakeLists.txt  IteratorRange.h  drop.h  filter.h  keys.h  reverse.h  take.h  transform.h  values.h
1-year/C++/labwork9-egorstar555/tests/: AdaptersSTL_test.cpp  CMakeLists.txt
2-year/Java/: README.md  settings.gradle.kts
2-year/Java/.github/workflows/: java.yml
2-year/Java/Lab1/: build.gradle.kts
2-year/Java/Lab2/: build.gradle.kts
2-year/Java/Lab3/: build.gradle.kts
2-year/Java/Lab4/: build.gradle.kts
2-year/Java/Lab5/: build.gradle.kts  docker-compose.yml
2-year/Java/Lab5/ownersMs/: build.gradle.kts  settings.gradle.kts
2-year/Java/Lab5/petsMs/: build.gradle.kts  settings.gradle.kts
2-year/Java/gradle/wrapper/: gradle-wrapper.properties
2-year/OOP-CSharp/: Directory.Packages.props  Itmo.ObjectOrientedProgramming.sln  README.md
2-year/OOP-CSharp/src/Lab1/Entities/: Train.cs
2-year/OOP-CSharp/src/Lab1/Models/: ResultPassing.cs
2-year/OOP-CSharp/src/Lab1/Services/: ForceSection.cs  (+4 more)
2-year/OOP-CSharp/src/Lab4/: Connection.cs  Program.cs
2-year/OOP-CSharp/tests/Lab1.Tests/: TestsRouts.cs
2-year/OOP-CSharp/tests/Lab2.Tests/: EducationalProgramTests.cs
2-year/OOP-CSharp/tests/Lab3.Tests/: MessageSystemTests.cs
2-year/OOP-CSharp/tests/Lab4.Tests/: FileSystemTests.cs
2-year/OOP-CSharp/tests/Lab5.Tests/: AtmTests.cs  Lab5.Tests.csproj
(+290 files in other folders)
